overflow fix

--- a/evolved.less
+++ b/evolved.less
@@ -316,7 +316,6 @@ a {
             position: relative;
 
             .aTitle {
-                overflow: hidden;
                 overflow-wrap: break-word;
                 white-space: normal;
                 line-height: 1rem;
